tests/functional/lang/eval-fail-duplicate-traces.err.exp
error:
       … from call site
         at /pwd/lang/eval-fail-duplicate-traces.nix:9:3:
            8| in
            9|   throwAfter 2
             |   ^
           10|

       … while calling 'throwAfter'
         at /pwd/lang/eval-fail-duplicate-traces.nix:4:16:
            3| let
            4|   throwAfter = n:
             |                ^
            5|     if n > 0

       … from call site
         at /pwd/lang/eval-fail-duplicate-traces.nix:6:10:
            5|     if n > 0
            6|     then throwAfter (n - 1)
             |          ^
            7|     else throw "Uh oh!";

       … while calling 'throwAfter'
         at /pwd/lang/eval-fail-duplicate-traces.nix:4:16:
            3| let
            4|   throwAfter = n:
             |                ^
            5|     if n > 0

       … from call site
         at /pwd/lang/eval-fail-duplicate-traces.nix:6:10:
            5|     if n > 0
            6|     then throwAfter (n - 1)
             |          ^
            7|     else throw "Uh oh!";

       … while calling 'throwAfter'
         at /pwd/lang/eval-fail-duplicate-traces.nix:4:16:
            3| let
            4|   throwAfter = n:
             |                ^
            5|     if n > 0

       … while calling the 'throw' builtin
         at /pwd/lang/eval-fail-duplicate-traces.nix:7:10:
            6|     then throwAfter (n - 1)
            7|     else throw "Uh oh!";
             |          ^
            8| in

       error: Uh oh!
